--- a/index.html
+++ b/index.html
@@ -47,7 +47,84 @@
                     <div class="initial__wrapper__content">
                         <h1 class="heading">survive at all costs</h1>
                         <h3 class="headingMiddle">experience new social batlle royale game</h3>
-                        <a href="#" class="initial__wrapper__content__buy">buy now on steam <hr> $14.99</a>
+                        <a href="#" class="buttonLink">buy now on steam <hr> $14.99</a>
+                    </div>
+                </div>
+            </section>
+            <section class="whatIsSos">
+                <div class="whatIsSos__wrapper">
+
+                </div>
+            </section>
+            <section class="features" id="features">
+                <div class="features__wrapper">
+                    <div class="features__wrapper__content">
+                        <h3 class="headingMiddle">what's so special?</h3>
+                        <h1 class="heading">features</h1>
+                    </div>
+                    <div class="features__wrapper__summary">
+                        <ul class="features__wrapper__summary__list">
+                            <li class="listContent">
+                                <h4>survive at all costs</h4>
+                                <p class="listContent__p">You have 30 minutes to find a relic, signal for extraction, and grab
+                                    one of three spots on the rescue chopper.</p>
+                            </li>
+                            <li class="listContent">
+                                <h4>create allies and enemies</h4>
+                                <p class="listContent__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, dolorem libero minima eos hic saepe aliquid ullam eaque doloremque deleniti.</p>
+                            </li>
+                            <li class="listContent">
+                                <h4>impress the audience</h4>
+                                <p class="listContent__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo tenetur vero reiciendis ratione deleniti, totam eligendi impedit hic commodi sequi.</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="requirements">
+                <div class="requirements__wrapper">
+                    <div class="requirements__wrapper__content">
+                        <h3 class="headingMiddle">can my computer run this game?</h3>
+                        <h1 class="heading">system requirements</h1>
+                    </div>
+                    <table class="requirements__wrapper__table">
+                        <tr>
+                            <td>
+                                <h3 class="table__heading">os:</h3>
+                                <p class="table__paragraph">Windows 7 64-bit only<br>(No OSX support at this time)</p>
+                            </td>
+                            <td>
+                                <h3 class="table__heading">processor:</h3>
+                                <p class="table__paragraph">Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <h3 class="table__heading">memory:</h3>
+                                <p class="table__paragraph">8 GB RAM</p>
+                            </td>
+                            <td>
+                                <h3 class="table__heading">storage:</h3>
+                                <p class="table__paragraph">8 GB available space</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <h3 class="table__heading">graphics:</h3>
+                                <p class="table__paragraph">NVIDIA GeForce GTX 660 2GB or <br>
+                                    AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </section>
+            <section class="press">
+                <div class="press__wrapper">
+                    <div class="press__wrapper__content">
+                        <h3 class="headingMiddle">what people think?</h3>
+                        <h1 class="heading">press quotes</h1>
+                        <p class="press__paragraph">Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re constantly working on our services to make it better every day and really listen to what our users has to say.</p>
+                        <a href="" class="buttonLink">Read more testimonials</a>
                     </div>
                 </div>
             </section>
