--- a/index.html
+++ b/index.html
@@ -126,6 +126,68 @@
                         <p class="press__paragraph">Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re constantly working on our services to make it better every day and really listen to what our users has to say.</p>
                         <a href="" class="buttonLink">Read more testimonials</a>
                     </div>
+                    <div class="press__wrapper__quotes">
+                        <div class="quotes__content">
+                            <div class="quotes__content__whoIs">
+                                <div class="whoIs__avatar">
+                                    <img src="images/image_8.jpg" alt="avatar">
+                                </div>
+                                <div class="whoIs__description">
+                                    <p class="whoIs__description__name">evan lahti</p>
+                                    <p class="whoIs__description__profession">PC Gamer</p>
+                                </div>
+                                <div class="whoIs__link">
+                                    <a href="#"><img src="images/twitter.svg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="quotes__content__quote">
+                                <p class="quote__paragraph">“One of my gaming highlights of the year.”</p>
+                            </div>
+                            <div class="quotes__content__date">
+                                <p class="date__paragraph">October18, 2018</p>
+                            </div>
+                        </div>
+                        <div class="quotes__content">
+                            <div class="quotes__content__whoIs">
+                                <div class="whoIs__avatar">
+                                    <img src="images/image.jpg" alt="avatar">
+                                </div>
+                                <div class="whoIs__description">
+                                    <p class="whoIs__description__name">jada griffin</p>
+                                    <p class="whoIs__description__profession">Nerdreactor</p>
+                                </div>
+                                <div class="whoIs__link">
+                                    <a href="#"><img src="images/twitter.svg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="quotes__content__quote">
+                                <p class="quote__paragraph">“The next big thing in the world of streaming and survival games.”</p>
+                            </div>
+                            <div class="quotes__content__date">
+                                <p class="date__paragraph">December 21, 2018</p>
+                            </div>
+                        </div>
+                        <div class="quotes__content">
+                            <div class="quotes__content__whoIs">
+                                <div class="whoIs__avatar">
+                                    <img src="images/image_1.jpg" alt="avatar">
+                                </div>
+                                <div class="whoIs__description">
+                                    <p class="whoIs__description__name">aaron williams</p>
+                                    <p class="whoIs__description__profession">Uproxx</p>
+                                </div>
+                                <div class="whoIs__link">
+                                    <a href="#"><img src="images/twitter.svg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="quotes__content__quote">
+                                <p class="quote__paragraph">“Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”</p>
+                            </div>
+                            <div class="quotes__content__date">
+                                <p class="date__paragraph">December 24, 2018</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
