--- a/index.html
+++ b/index.html
@@ -190,9 +190,57 @@
                     </div>
                 </div>
             </section>
+            <section class="newsletter">
+                <div class="newsletter__wrapper">
+                    <div class="newsletter__wrapper__content">
+                        <div class="newsletter__wrapper__heading">
+                            <h3 class="headingMiddle">want to stay in touch?</h3>
+                            <h1 class="heading">newsletter subscribe</h1>
+                        </div>
+                        <div class="newsletter__wrapper__paragraph">
+                            <p class="newsletter__paragraph">In order to start receiving our news, all you have to do is enter your email address. Everything else will be taken care of by us. We will send you emails containing information about game. We don’t spam.</p>
+                        </div>
+                        <div class="newsletter__wrapper__form">
+                            <form action="#">
+                                <label>
+                                    <input type="email" required>
+                                    <div class="label__text">Your email adress</div>
+                                </label>
+                                <input type="submit" value="Subscribe now">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
-
+            <div class="footer__wrapper">
+                <div class="footer__wrapper__content">
+                    <div class="footer__wrapper__top">
+                        <div class="logo_size_m">
+                            <img src="images/logo.png" alt="logo">
+                        </div>
+                        <ul class="navMenu">
+                            <li class="navMenu__item"><a class="textLink" href="#">menu</a></li>
+                            <li class="navMenu__item"><a class="textLink" href="#">about</a></li>
+                            <li class="navMenu__item"><a class="textLink" href="#">game features</a></li>
+                            <li class="navMenu__item"><a class="textLink" href="#">system requirements</a></li>
+                            <li class="navMenu__item"><a class="textLink" href="#">quotes</a></li>
+                        </ul>
+                        <div class="socialLinks">
+                            <a href="#" class="socialLinks__item"><img src="images/facebook.svg" alt=""></a>
+                            <a href="#" class="socialLinks__item"><img src="images/twitter.svg" alt=""></a>
+                            <a href="#" class="socialLinks__item"><img src="images/Vector.svg" alt=""></a>
+                            <a href="#" class="socialLinks__item"><img src="images/twitch.svg" alt=""></a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="footer__wrapper__bot">
+                        <div class="bottom__left">© 2018 Outpost Games, Inc. All Rights Reserved</div>
+                        <div class="bottom__right"><a href="#">Privacy Policy</a> | <a href="#">Terms of Services</a> | <a href="#">Code of Conduct</a></div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
     <script src="js/javascript.js"></script>
